macros/tests/ui/complex_missing_required.stderr
error: missing `required = [...]`
 --> tests/ui/complex_missing_required.rs:5:1
  |
5 | #[step_entity_complex(name = "FOO", pass = Pass1)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `step_entity_complex` (in Nightly builds, run with -Z macro-backtrace for more info)
